fixed button alignment

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -45,14 +45,14 @@ header {
 }
 
 input {
-  margin-top: 6px;
+  margin-top: 5px;
 }
 
 label {
   padding-left: 5px;
 }
 
-.btn-primary {
+.btn {
   border: none;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
@@ -64,6 +64,7 @@ label {
   margin: 16px 16px 16px 20px;
   padding: 14px 34px;
   text-align: center;
+  width: 40%;
   cursor: pointer;
 }
 
